--- a/app/assets/stylesheets/all/main.css.scss
+++ b/app/assets/stylesheets/all/main.css.scss
@@ -218,7 +218,7 @@ div.location_picker form.location_search div.results a { display: block; margin-
 /* settings */
 form.setting_form .adapter_settings { display: none; }
 form.setting_form .adapter_settings .password_fields { display: none; }
-form.setting_form #external_sql .control pre { width: 325px; height: 70px; overflow: auto; border: 1px solid #ccc; margin: 0 0 3px 0; font-size: 8pt; }
+form.setting_form #external_sql .control pre { width: 415px; height: 100px; overflow: auto; border: 1px solid #ccc; margin: 0 0 3px 0; font-size: 8pt; }
 form.setting_form #external_sql .control a { font-size: 9pt; }
 
 /* sms guide */
